--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<img class="moviePic" src ="https://unsplash.com/photos/a-drink-with-a-candy-cane-in-a-glass-4WNQAXL6tOU">
+<p class="movieDetail">hgguhijkjkhjhvhjhjh</p>
 </body>
 
 </html>
